# aioduckdb

./: CHANGELOG.md  LICENSE  README.rst  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
aioduckdb/: __init__.py  core.py  cursor.py  relation.py  result.py
aioduckdb/tests/: __init__.py  __main__.py  arrow.py  relations.py  smoke.py  test_parquet.py
