[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "aioduckdb"
author = "Salvador Pardiñas"
author-email = "darkfm@vera.com.uy"
description-file = "README.rst"
home-page = "https://github.com/kouta-kun/aioduckdb"
requires = [
    "duckdb",
    "typing_extensions >= 4.0; python_version < '3.8'",
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

[tool.flit.metadata.urls]
Github = "https://github.com/kouta-kun/aioduckdb"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.coverage.run]
branch = true
include = ["aioduckdb/*"]
omit = ["aioduckdb/tests/*"]

[tool.coverage.report]
fail_under = 75
precision = 1
show_missing = true
skip_covered = true

[tool.isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = false
include_trailing_comma = true
use_parentheses = true
